# virtual-reviewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.ja.md  README.md  pyproject.toml
docs/design/: architecture.md
sample/: application.json  regulations.md
scripts/: e2e.sh
tests/: test_isolation.py  test_log.py  test_models.py  test_questions.py  test_report.py  test_security.py
virtual_reviewer/: __init__.py  answers.py  brain.py  compile.py  intake.py  isolation.py  llm.py  log.py  models.py  orchestrate.py  questions.py  report.py
